<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Phrasebook</string>
	<string name="CategorySpinTitle">Category:</string>
	<string name="LanguageSpinTitle">Ask in:</string>
	<string name="MyPhrasebookTitle">My Phrasebook</string>	
	<string name="TryAgain">Try Again</string>	
	<string name="catWords">Words</string>
	<string name="catUncategorized">Uncategorized Words</string>		
	<string name="RevealAnswer">\?</string>	
	<string name="Lang1">English</string>	
	<string name="Lang2">Finnish</string>	
	<string name="LangBoth">Both</string>
	<string name="GuessingOn">Turn Guessing On</string>
	<string name="GuessingOff">Turn Guessing Off</string>
	<string name="Phrasebook">Phrasebook</string>
	<string name="Quiz">Quiz</string>
	<string name="Maintenance">Maintenance</string>			
	<string name="SelectCategories">Select Categories</string>			
	<string name="Add">Add</string>
	<string name="Update">Update</string>
	<string name="LangTextIsEmpty">%s text cannot be empty</string>
	<string name="OK">OK</string>
	<string name="Yes">Yes</string>
	<string name="No">No</string>
	<string name="NoCatSelTitle">No category selected</string>
	<string name="NoCatSelBody">Would you like to add an uncategorized term?</string>
	<string name="QuizLevel">Quiz Level</string>
	<string name="QuizLevelEasy">Easy</string>
	<string name="QuizLevelMedium">Medium</string>
	<string name="QuizLevelHard">Hard</string><string name="PBMenuEditItem">Edit</string><string name="PBMenuDeleteItem">Delete</string><string name="PBMenuAddToPractice">Add to practice</string>
	
	<string name="PBMenuRemoveFromPractice">Remove from practice</string>
	
	
</resources>
