<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  >

	<TableLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:shrinkColumns="2"
	    >

	    <TableRow>
			<TextView
			  	android:text="@string/Lang1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
				
			<TextView
			  	android:text=":"
				/>
	
			<skydiver.dev.ClearableEditText
			  	android:id="@+id/txtLang1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
	    </TableRow>
	    
	    <TableRow>
			<TextView
			  	android:text="@string/Lang2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
	
			<TextView
			  	android:text=":"
				/>
	
			<skydiver.dev.ClearableEditText
			  	android:id="@+id/txtLang2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
	    </TableRow>
	
	    <TableRow>
			<TextView />
	
			<TextView />
	
			<Button
				android:id="@+id/BttSetCategories"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/SelectCategories"
				/>
	    </TableRow>
	
	    <TableRow>
			<TextView />
	
			<TextView />
	
			<Button
				android:id="@+id/BttAddOrUpdatePhrase"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="Add / Update"
				/>
	    </TableRow>
	
	</TableLayout>
	
</LinearLayout>
