<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:id="@+id/panelMain"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
>

	<TableLayout 
		android:id="@+id/panelSpinners"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
		android:layout_weight="0"
	    android:stretchColumns="1"
	    >
	
	    <TableRow>
	        <TextView
	            android:text="@string/CategorySpinTitle"
	            android:layout_column="1"
		    />
	        <TextView
	            android:text="@string/LanguageSpinTitle"
	            />
	    </TableRow>
	
	    <TableRow>
			<Spinner
				android:id="@+id/spinCategory"
	            android:layout_column="1"
	            />
			<Spinner
				android:id="@+id/spinLanguage"
	            />
	    </TableRow>
	
	</TableLayout>
	
	<LinearLayout
	android:id="@+id/panelMain"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:layout_weight="1"
	>
		<TextView
		android:id="@+id/txtQuestion"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="20sp"
		android:text="Question"
		android:gravity="center"
		android:layout_weight="0"
		/>

		<LinearLayout
		android:id="@+id/panelAnswerButtons"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_weight="1"
		>	
			<include android:id="@+id/bttAnswer0" layout="@layout/quiz_answer_button" />
			<include android:id="@+id/bttAnswer1" layout="@layout/quiz_answer_button" />
			<include android:id="@+id/bttAnswer2" layout="@layout/quiz_answer_button" />
		</LinearLayout>
		
		<Button
			android:id="@+id/bttRevealAnswer"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/RevealAnswer"
			android:textSize="100sp"
		/>
		
	</LinearLayout>

	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="0"
		>
		
		<TextView
		android:id="@+id/txtQuestionsCounter"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="20sp"
		android:text="X / Y"
		android:gravity="left"
		/>
		
		<TextView
		android:id="@+id/txtSuccessPercentage"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="20sp"
		android:text="100%"
		android:gravity="right"
		/>
	</RelativeLayout>
	
</LinearLayout>